# frisp

./: .gitignore  .prettierignore  AGENTS.md  README.md  package-lock.json  package.json  playwright.config.ts  svelte.config.js  tsconfig.json  vite.config.ts  vitest.config.ts  wrangler.jsonc
benchmarks/: baseline.json  codec-bench.bench.spec.ts
codecs/resize/: Cargo.toml
codecs/resize/pkg/: package.json  squoosh_resize.d.ts  squoosh_resize.js  squoosh_resize_bg.wasm  squoosh_resize_bg.wasm.d.ts
codecs/resize/src/: lib.rs  utils.rs
docs/: HANDOFF-2026-05-30.md  INDEX.md  MIGRATION-PLAN.md  README.md  STATUS.md  WORKLOG.md  browser-support.md  build-and-runtime.md  bulk-image-architecture.md  bulk-ui-design-options.md  codec-build-notes.md  codec-options-model.md  codec-provenance.md  codec-surface-cleanup.md  codec-upgrade-audit.md  codec-upgrade-handoff.md  codec-upgrade-runbooks.md  dashboard.html  dependency-modernization.md  first-principles-review.md  frisp-cli-analysis.md  issue-list.md  journey-and-article-notes.md  lab-editor-restyle.md  lab-intro-page.md  maintenance-status.md  manual-qa.md  new-codec-investigation.md  overview.md  parity-audit.md  phase-1-readiness-audit.md  presk-rename-runbook.md  progress-dashboard.html  progress-dashboard.md  project-identity.md  review-hardening-plan.md  road-map.md  svelte-hardening-plan.md  svelte-migration-context.md  sveltekit-codec-asset-strategy.md  (+7 more)
lib/: browser-smoke.js  feature-plugin.js  preview-server.js  simple-ts.js  smoke-build.js  test-bulk-helpers.js  test-helpers.js
src/: app.d.ts  (+1 more)
(+348 files in other folders)
